# devops-handson-project

./: .gitignore  README.md
.github/workflows/: ci.yaml  release.yml
app/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
app/src/: main.py
app/src/devops_handson_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/tests/: test_app.py
infra/terraform/: main.tf  output.tf  providers.tf
