[project]
name = "devops-handson-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "prometheus-client==0.21.1",
  "redis==5.2.1",
]

[dependency-groups]
dev = [
  "pytest==8.3.4",
  "httpx==0.28.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
